<resources>
    <string name="app_name">AppComidas</string>
    <string name="botonPideEnLinea">Pide en Linea</string>
    <string name="botonRegistrarse">Registrarse</string>
    <string name="botonIniciaSesion">Inicia Sesion</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="btnContinuarFacebook">Continuar con Facebook</string>
    <string name="CampoCorreoElectronico">Correo Electronico</string>
    <string name="textOlvidoContrasena">¿Olvido su Contraseña?</string>
    <string name="Contrasena">Ingrese Contraseña</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campoSeleccionDocumento">Seleccione el tipo de documento</string>
    <string name="campoNumDocumento">Numero de documento</string>
    <string name="campoNumCelular">Numero Celular</string>
    <string name="CampoFechaNacimiento">Fecha de Nacimiento</string>
    <string name="campoSexo">sexo</string>
    <string name="campoNombresApellidos">Nombres y Apellidos</string>
    <string name="TerminosYcondiciones">Acepta los terminos y condiciones y la politica de privacidad</string>
    <string name="CampoIngreseBusqueda">Escriba aqui para buscar</string>
    <string name="TituloComidasRapidas">Comidas Rapidas</string>
    <string name="tituloAgregarCarrito">Agregar al carrito</string>
    <string name="tituloTotal">Total:$</string>
    <string name="select">Select Item</string>
    <string-array name="Lista">
        <item>Cedula</item>
        <item>NIT</item>
        <item>Cedula estrajeria</item>
    </string-array>
</resources>