<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FragmentRegistrarse">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:id="@+id/tablaLayout"
            android:layout_width="406dp"
            android:layout_height="353dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextNombeApellido"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/campoNombresApellidos"
                    android:inputType="textPersonName"
                    android:textColor="#F6F5F5"
                    android:textColorHint="#FFFBFB" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/CampoCorreoElectronico"
                    android:inputType="textEmailAddress"
                    android:textColor="#FDFCFC"
                    android:textColorHint="#FFFBFB" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:hint="Seleccione el tipo de Documento"
                    android:textColorHint="#F3F0F0">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none" />
                </com.google.android.material.textfield.TextInputLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextNumberDecimal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/campoNumDocumento"
                    android:inputType="numberDecimal"
                    android:textColor="#FDFCFC"
                    android:textColorHint="#FFFBFB" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/campoNumCelular"
                    android:inputType="phone"
                    android:textColor="#F6F4F4"
                    android:textColorHint="#FFFBFB" />
            </TableRow>

            <TableRow
                android:layout_width="280dp"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/FechaNacimientoRegistro"
                        android:layout_width="350dp"
                        android:layout_height="match_parent"
                        android:text="@string/CampoFechaNacimiento"
                        android:textColor="#FDFCFC" />

                    <ImageButton
                        android:id="@+id/btn_date"
                        android:layout_width="31dp"
                        android:layout_height="25dp"
                        android:layout_weight="1"
                        android:onClick="onClick"
                        android:src="@android:drawable/btn_dropdown"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </LinearLayout>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/campoSexo"
                    android:textColor="#FFFDFD" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/editTextTextPassword3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/Contrasena"
                    android:inputType="textPassword"
                    android:textColor="#FBF9F9"
                    android:textColorHint="#FFFBFB" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/checkBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/TerminosYcondiciones"
                    android:textColor="#F8F6F6" />
            </TableRow>


        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#040404"
            android:text="@string/botonRegistrarse"
            android:textColor="#FDFBFB"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tablaLayout"
            app:layout_constraintVertical_bias="0.259" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>