<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla2"
    tools:context=".Registro">

    <TableLayout
        android:id="@+id/tablaLayout"
        android:layout_width="395dp"
        android:layout_height="237dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editNombre"
                android:layout_width="391dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/campoNombresApellidos"
                android:inputType="textPersonName"
                android:textColor="#F1EBEB"
                android:textColorHint="#F8F0F0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editCedula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/campoNumDocumento"
                android:textColor="#F1EBEB"
                android:textColorHint="#F8F0F0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:hint="@string/CampoCorreoElectronico"
                android:textColor="#F1EBEB"
                android:textColorHint="#F8F0F0" />
        </TableRow>

        <TableRow
            android:layout_width="280dp"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editCeluar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:hint="@string/campoNumCelular"
                android:textColor="#F1EBEB"
                android:textColorHint="#F8F0F0" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/Contrasena"
                android:textColor="#F1EBEB"
                android:textColorHint="#F8F0F0" />
        </TableRow>


    </TableLayout>

    <Button
        android:id="@+id/botonRegistroo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#040404"
        android:fontFamily="@font/party_confetti"
        android:text="@string/botonRegistrarse"
        android:textColor="#FDFBFB"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablaLayout"
        app:layout_constraintVertical_bias="0.259" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/party_confetti"
        android:text="Registro"
        android:textColor="#FDFCFC"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/tablaLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>