<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".FragmentIniciaSesion">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/olvidoContrasena2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="88dp"
            android:fontFamily="@font/party_confetti"
            android:text="@string/textOlvidoContrasena"
            android:textColor="#ECE7E7"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
            app:layout_constraintVertical_bias="0.393" />

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="250dp"
            android:layout_height="52dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.387">

            <ImageView
                android:id="@+id/iconoFacebook"
                android:layout_width="42dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/icono_facebook" />

            <Button
                android:id="@+id/btnIniciarFacebook"
                android:layout_width="190dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#3F51B5"
                android:fontFamily="@font/party_confetti"
                android:text="@string/btnContinuarFacebook"
                android:textColor="#F8ECEC"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnSesionIniciada2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="#050505"
            android:fontFamily="@font/party_confetti"
            android:text="@string/botonIniciaSesion"
            android:textColor="#EFECEC"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:layout_constraintVertical_bias="0.295" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.142">


            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/party_confetti"
                android:hint="@string/CampoCorreoElectronico"
                android:inputType="textEmailAddress"
                android:textColor="#FFFBFB"
                android:textColorHint="#FFFBFB"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:fontFamily="@font/party_confetti"
                android:hint="@string/Contrasena"
                android:inputType="textPassword"
                android:textColor="#FFFEFE"
                android:textColorHint="#FFFBFB"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>