<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <RelativeLayout
            android:layout_width="348dp"
            android:layout_height="489dp"
            app:layout_constraintBottom_toTopOf="@+id/btnPedirLinea"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <ViewFlipper
                android:id="@+id/v_flipper"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

        <Button
            android:id="@+id/btnPedirLinea"
            android:layout_width="121dp"
            android:layout_height="52dp"
            android:background="#222020"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/party_confetti"
            android:hapticFeedbackEnabled="false"
            android:onClick="onClick"
            android:text="@string/botonPideEnLinea"
            android:textColor="#EFEAEA"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.845"
            app:rippleColor="#000000" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.622"
            app:srcCompat="@color/cardview_light_background" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="330dp"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnPedirLinea">

            <Button
                android:id="@+id/btnmenos"
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:background="#222020"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/party_confetti"
                android:onClick="onClick"
                android:text="@string/botonRegistrarse"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnIniciaSesion"
                android:layout_width="177dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:background="#222020"
                android:backgroundTint="@color/black"
                android:fontFamily="@font/party_confetti"
                android:onClick="onClick"
                android:text="@string/botonIniciaSesion"
                android:textColor="#FFFDFD"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/foodfastletrero" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>